--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "robofriends",
-  "homepage": "https://yeohhq.github.io/robofriends",
+  "homepage": "https://yeohhq.github.io/react-robofriends",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
